Fix  issue with smaller screen sizes creating a horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@
 body {
     height: 100%;
     width: 100%;
-   
     display: flex;
     flex-direction: column;
 }
@@ -50,6 +49,7 @@ body {
     display: flex;
     min-height: 200px;
     padding: 50px 0px;
+    flex-wrap: wrap;
 }
 
 .hero-content div {
@@ -66,6 +66,7 @@ body {
 
 .right-header-links ul {
     display: flex;
+    flex-wrap: wrap;
     list-style: none;
     gap: 32px;
     justify-content: center;
@@ -103,7 +104,7 @@ body {
 .call-to-action-box {
     background-color: #3882F6;
     flex: 1;
-    height: 125px;
+    min-height: 125px;
     border-radius: 10px;
     padding: 40px;
     color: #F9FAF8;
@@ -165,11 +166,13 @@ body {
     font-weight: 800;
     padding: 30px 0px;
 }
+
 .poodle-images-container {
     display: flex;
     justify-content: center;
     gap: 50px;
     padding-bottom: 100px;
+    flex-wrap: wrap;
 }
 
 .quote-text {
